# gstring

./: CHANGELOG.md  Cargo.toml  Makefile.md  README.md
src/: lib.rs
t/: README.md
